"Added Swagger annotations to personnel controller and updated swagger.json file"
