# src/controllers/personnel.controller.js
@@ -7,6 +7,19 @@ const Personnel = require("../models/personnel.model");
 
 module.exports = {
 	list: async (req, res) => {
+		/*
+      #swagger.tags = ["Personnels"]
+      #swagger.summary = "List Personnels"
+      #swagger.description =  `
+            You can send query with endpoint for filter[], search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+        `
+    */
 		const data = await res.getModelList(Personnel, {}, "departmentId");
 		res.status(200).send({
 			error: false,
@@ -15,6 +28,9 @@ module.exports = {
 		});
 	},
 	create: async (req, res) => {
+		/*
+      #swagger.tags = ["Personnels"]
+    */
 		const isLead = req.body?.isLead || false;
 		let message = "Yeni personel eklendi.";
 		if (isLead) {
@@ -40,6 +56,9 @@ module.exports = {
 		});
 	},
 	read: async (req, res) => {
+		/*
+      #swagger.tags = ["Personnels"]
+    */
 		const data = await Personnel.findOne({ _id: req.params.id });
 		res.status(200).send({
 			error: false,
@@ -47,6 +66,17 @@ module.exports = {
 		});
 	},
 	update: async (req, res) => {
+		/*
+      #swagger.tags = ["Personnels"]
+    */
+		if (!req.user.isAdmin) {
+			req.body.isAdmin = false;
+			delete req.body.isLead;
+			delete req.body.salary;
+			delete req.body.title;
+			delete req.body.startedAt;
+			delete req.body.isActive;
+		}
 		const isLead = req.body?.isLead || false;
 		if (isLead) {
 			const { departmentId } = await Personnel.findOne({
@@ -75,6 +105,9 @@ module.exports = {
 		});
 	},
 	delete: async (req, res) => {
+		/*
+      #swagger.tags = ["Personnels"]
+    */
 		const data = await Personnel.deleteOne({ _id: req.params.id });
 
 		res.status(data.deletedCount > 0 ? 204 : 404).send({
