# swagger.json
@@ -247,7 +247,11 @@
     },
     "/personnels/": {
       "get": {
-        "description": "",
+        "tags": [
+          "Personnels"
+        ],
+        "summary": "List Personnels",
+        "description": "\r  You can send query with endpoint for filter[], search[], sort[], page and limit.\r  <ul> Examples:\r  <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r  <li>URL/?<b>filter[field1]=value1&filter[field2]=value2</b></li>\r  <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r  <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
         "responses": {
           "200": {
             "description": "OK"
@@ -255,6 +259,9 @@
         }
       },
       "post": {
+        "tags": [
+          "Personnels"
+        ],
         "description": "",
         "parameters": [
           {
@@ -279,6 +286,9 @@
     },
     "/personnels/{id}": {
       "get": {
+        "tags": [
+          "Personnels"
+        ],
         "description": "",
         "parameters": [
           {
@@ -295,6 +305,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Personnels"
+        ],
         "description": "",
         "parameters": [
           {
@@ -302,6 +315,33 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "isAdmin": {
+                  "example": "any"
+                },
+                "req": {
+                  "example": "any"
+                },
+                "salary": {
+                  "example": "any"
+                },
+                "title": {
+                  "example": "any"
+                },
+                "startedAt": {
+                  "example": "any"
+                },
+                "isActive": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -311,6 +351,9 @@
         }
       },
       "delete": {
+        "tags": [
+          "Personnels"
+        ],
         "description": "",
         "parameters": [
           {
@@ -330,6 +373,9 @@
         }
       },
       "patch": {
+        "tags": [
+          "Personnels"
+        ],
         "description": "",
         "parameters": [
           {
@@ -337,6 +383,33 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "isAdmin": {
+                  "example": "any"
+                },
+                "req": {
+                  "example": "any"
+                },
+                "salary": {
+                  "example": "any"
+                },
+                "title": {
+                  "example": "any"
+                },
+                "startedAt": {
+                  "example": "any"
+                },
+                "isActive": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
